--- a/bpers/Cargo.toml
+++ b/bpers/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-hashbrown = { workspace = true }
+indexmap = { workspace = true }
+foldhash = { workspace = true }
