--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 members = ["bpers"]
-dependencies = { indexmap = "2.9.0", foldhash = "0.1.5", bincode = "2.0.1" }
+dependencies = { indexmap = "2.9.0", foldhash = "0.1.5", bincode = "2.0.1", thiserror = "2.0.12" }
 
 [package]
 name = "bpe"
@@ -11,4 +11,6 @@ edition = "2024"
 [dependencies]
 bpers = { path = "bpers" }
 clap = { version = "4.5.35", features = ["derive"] }
-bincode = { workspace = true }
+anyhow = "1.0.97"
+
+bincode.workspace = true
